clean up code + fix modal close btn spacing

--- a/client/src/components/modals/Modal.css
+++ b/client/src/components/modals/Modal.css
@@ -70,7 +70,7 @@
 
 .modal-close-btn {
   position: absolute;
-  left: 2.25rem;
+  left: 1.5rem;
   padding: 0.25rem;
   border-width: 0;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
